changed the transition speed of the social media cards

--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ header p{
     border-top: 4px solid var(--Facebook);
 }
 .facebook:hover{
-    transition: .5s ease;
+    transition: all 2s ease;
     background: 
     linear-gradient(to right, rgb(62, 64, 87), rgb(25, 4, 145)) border-box;
   border-radius: 50em;
@@ -153,7 +153,7 @@ header p{
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
   border-top: 4px solid transparent;
-  transition: .5s ease;
+  transition: all 2s ease;
 }
 .instagram{
     border-top-style: solid;
@@ -168,7 +168,7 @@ header p{
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
   border-top: 4px solid transparent;
-  transition: .5s ease;
+  transition: all 2s ease;
 }
 .youtube{
     border-top: 4px solid var(--YouTube);
@@ -180,7 +180,7 @@ header p{
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
   border-top: 4px solid transparent;
-  transition: .5s ease;
+  transition: all 2s ease;
 }
 .green{
     color: var(--Lime-Green);
