--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ header p{
     height: 1.5em;
     margin: 0 .3em;
     cursor: pointer;
+    transition: all 4s ease;
 }
 .overview{
     margin-bottom: 4em;
